--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script
-      src="https://kit.fontawesome.com/9da32d8228.js"
-      crossorigin="anonymous"
-    ></script>
-    <meta name="theme-color" content="#000000" />
-    <title>React App</title>
+    <title>React Project #1</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
